[metadata]
name = devnull
version = 0.0.0
author = digitalr00ts
author-email = carlos@digitalr00ts.com
description  = dev/null
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
url = https://github.com/digitalr00ts/devnull
keywords =
  digitalr00ts
  esc27
